        PR target/39254         * config/rs6000/rs6000.c (rs6000_emit_move): Don't emit a USE         for the symbol ref of a constant that is the source of a move         - nor for any other not-obvious-label-ref constants.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@148568 138bc75d-0d04-0410-961f-82ee72b054a4